Language: fix terms and add missing ones

--- a/public/main/template/default/skill/student_report.html.twig
+++ b/public/main/template/default/skill/student_report.html.twig
@@ -1,7 +1,7 @@
 {% autoescape false %}
-    <h1 class="page-header">{{ 'My Badges'|trans }}</h1>
+    <h1 class="page-header">{{ 'My skills'|trans }}</h1>
     <p>
-        {{ "My skills report introduction"|trans }}
+        {{ "The skills you have acquired, formally or non-formally, social or technical."|trans }}
     </p>
     {% if rows %}
         <div class="communications">
