--- a/assets/css/scss/_exercise.scss
+++ b/assets/css/scss/_exercise.scss
@@ -578,3 +578,20 @@
     @apply bg-primary;
   }
 }
+
+.qtype-grid {
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-rows: repeat(2, auto);
+  gap: 0.5rem 0.5rem;
+  align-items: center;
+  width: 100%;
+  padding: .5rem;
+  overflow-x: auto;
+}
+
+.qtype-grid > li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
